--- a/index.html
+++ b/index.html
@@ -30,42 +30,48 @@
       <span class="ml-3 text-xl">JavaScript Projects</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <a class="mr-5 hover:text-gray-900">Home</a>  
-      <a class="mr-5 hover:text-gray-900">About</a>  
-      <a class="mr-5 hover:text-gray-900">List</a>  
+      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
+      <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
+      <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
+                <path d="M5 12h14M12 5l7 7-7 7"></path> 
             </svg>
         </button>
     </form>
   </div>
 </header>
-<section class="text-gray-500 bg-blue-300 body-font">
-  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+<section class="text-gray-500 h-auto bg-blue-300 body-font">
+  <div   class="container mx-auto flex px-5 py-32 md:flex-row flex-col items-center">
+    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left md:mb-0 items-center text-center">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> I Upload my <span class="text-red-400">JavaScript</span>
         <br class="hidden lg:inline-block">Project Here
       </h1>
       <p class=" leading-relaxed text-black">I have big Dreams</p>
       <p class="mb-8 leading-relaxed text-black">So I start taking small steps.</p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-red-400 border-0 py-2 px-6 focus:outline-none hover:bg-red-500 rounded text-lg">Button</button>
-        <button class="ml-4 inline-flex text-white bg-blue-800 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg">Button</button>
+        <button class="inline-flex text-white bg-red-400 border-0 py-2 px-6 focus:outline-none hover:bg-red-500 rounded text-lg">Scroll</button>
+        <button class="ml-4 inline-flex text-white bg-blue-800 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg">down</button>
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-      <img class="object-cover object-center rounded" alt="hero" src="https://images.unsplash.com/photo-1579468118864-1b9ea3c0db4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
+      <img class="object-cover object-center rounded-xl shadow-xl" alt="hero" src="https://images.unsplash.com/photo-1579468118864-1b9ea3c0db4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
     </div>
   </div>
-</section>
+            <!-- <div class="mb-3 text-blue-900 text-lg text-center">
+              <p>List of my <span class="text-red-500"> Mini Projects </span>done so far.</p>
+            </div>
+            <div class="text-blue-900 text-lg text-center pb-8">
+              <a href="list.html" class="bg-red-400 rounded text-white p-1 border-0 py-1 px-5 focus:outline-none hover:bg-red-500"> List </a>
+            </div> -->
+            </section>
 <hr>
         <!-- ////////////////////////////////////////////////////////////////////////////////// -->
         <!-- calculator -->
-        <section class="bg-red-500 text-gray-700 body-font pb-8">  
-            <div class="container bg-red-500 px-5 py-2 mx-auto pb-8 mb-8">
+        <section class="bg-red-400 text-gray-700 body-font pb-8">  
+            <div class="container px-5 py-2 mx-auto pb-8 mb-8">
         <div class="text-center text-grey-500 mt-8">  
             <p class="sm:text-4xl text-7xl mb-4 font-medium text-white">Calculator</p>
         </div>
