--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color:rgb(247, 242, 242);
             margin-bottom: 0px;
             }
-            .un{ background : rgba(255, 255, 255, 0.904);
+            .un{ background : rgba(255, 255, 255, 0.904); 
               color:rgb(214, 214, 214); 
               } 
           .hi{ background : rgba(29, 250, 184, 0.904);
@@ -30,9 +30,9 @@
       <span class="ml-3 text-xl">JavaScript Projects</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>   
+      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
+      <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
       <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
-      <a href="about.html" class="mr-5 hover:text-gray-900">About</a>
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
@@ -46,14 +46,13 @@
 <section class="text-gray-500 h-auto bg-blue-300 body-font">
   <div   class="container mx-auto flex px-5 py-32 md:flex-row flex-col items-center">
     <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left md:mb-0 items-center text-center">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> I Upload my <span class="text-red-400">JavaScript</span>
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"> I Upload my <span class="text-red-400 font-light">JavaScript</span>
         <br class="hidden lg:inline-block">Project Here
       </h1>
-      <p class=" leading-relaxed text-black">I have big Dreams</p>
-      <p class="mb-8 leading-relaxed text-black">So I start taking small steps.</p>
+      <p class="mb-8 leading-relaxed text-gray-600 font-medium">Start taking small steps.</p>
       <div class="flex justify-center">
-        <button class="inline-flex text-white bg-red-400 border-0 py-2 px-6 focus:outline-none hover:bg-red-500 rounded text-lg">Scroll</button>
-        <button class="ml-4 inline-flex text-white bg-blue-800 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg">down</button>
+        <button class="mb-2 inline-flex text-white bg-red-400 border-0 py-2 px-6 focus:outline-none hover:bg-red-500 rounded text-lg shadow font-medium">Scroll</button>
+        <button class="mb-2 ml-4 inline-flex text-white bg-blue-800 border-0 py-2 px-6 focus:outline-none hover:bg-blue-700 hover:text-white rounded text-lg shadow font-medium">Down</button>
       </div>
     </div>
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
@@ -71,25 +70,25 @@
         <!-- ////////////////////////////////////////////////////////////////////////////////// -->
         <!-- calculator -->
         <section class="bg-red-400 text-gray-700 body-font pb-8">  
-            <div class="container px-5 py-2 mx-auto pb-8 mb-8">
-        <div class="text-center text-grey-500 mt-8">  
-            <p class="sm:text-4xl text-7xl mb-4 font-medium text-white">Calculator</p>
+            <div class="container px-5 py-2 mx-auto pb-8 mb-8 text-center">
+        <div class="text-center text-grey-500 mt-6 bg-white shadow rounded-xl ">  
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-red-400">Calculator</h1>
         </div>
-        <div class="mx-auto lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0">
+        <div class="mx-auto lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
                     <!-- <h2 class="text-center text-gray-900 text-lg mb-1 font-medium title-font text-lg">...|...</h2> -->
         <div class="text-center">
-            <input class="text-center bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 text-base px-4 py-2 mb-2" placeholder="Enter no here" type="text" id="a" name="1">
-            <input class="bg-white text-center rounded border border-gray-400 focus:outline-none focus:border-blue-500 text-base px-4 py-2" placeholder="Enter no here" type="text" id="b" name="2">
+            <input class="text-center bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 shadow-sm font-medium text-base px-4 py-2 mb-2" placeholder="Enter no here" type="text" id="a" name="1">
+            <input class="bg-white text-center rounded border border-gray-400 focus:outline-none focus:border-blue-500 shadow-sm font-medium text-base px-4 py-2" placeholder="Enter no here" type="text" id="b" name="2">
         </div>
             <!--  calculator button -->
         <br> 
         <div class="text-center ">
-            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg focus:outline-none" id="add" onclick="add()">+</button>
-            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg focus:outline-none" id="min" onclick="min()">-</button>
-            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg focus:outline-none" id="mul" onclick="mul()">×</button>
-            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg focus:outline-none" id="div" onclick="div()">÷</button>
+            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg shadow focus:outline-none" id="add" onclick="add()">+</button>
+            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg shadow focus:outline-none" id="min" onclick="min()">-</button>
+            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg shadow focus:outline-none" id="mul" onclick="mul()">×</button>
+            <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg shadow focus:outline-none" id="div" onclick="div()">÷</button>
         </div>
-        <div class="my-2 bg-gray-300 border-1 text-center text-blue-400 w-25 text-lg" id="ans">
+        <div class="my-2 bg-gray-100 border-1 font-medium shadow text-center text-blue-400 w-25 text-lg rounded-xl" id="ans">
             Result
         </div>
       </div>
@@ -99,13 +98,13 @@
             <!-- like and dislike -->
             <section class="bg-blue-300 text-gray-700 body-font pb-8">  
               <div class="container bg-blue-300 px-5 py-2 mx-auto pb-8 mb-8">
-          <div class="text-center text-grey-500 mt-8">    
-      <p class="sm:text-4xl text-7xl mb-4 font-medium text-white">Like / Dislike</p>
+          <div class="text-center text-grey-500 mt-6 bg-white rounded-xl shadow">    
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-300  ">Like / Dislike</h1>
   </div>
-  <div class="mx-auto lg:w-1/3 md:w-1/2 bg-gray-300 rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0">
+  <div class="mx-auto lg:w-1/3 md:w-1/2 bg-gray-300 rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
         <div class="rex text-center">
-            <button  class="text-gray-600 bg-white border-0 mx-8 py-1 px-6 rounded text-lg focus:outline-none hover:text-white" id="lili" onclick="like()">unlike</button>
-            <button  class="text-gray-600 bg-white border-0 mx-8 py-1 px-6 rounded text-lg focus:outline-none hover:text-white" id="didi" onclick="dislike()">undislike</button>
+            <button  class="m-2 text-gray-600 bg-white border-0 mx-8 py-1 px-6 rounded text-lg focus:outline-none shadow hover:text-white" id="lili" onclick="like()">unlike</button>
+            <button  class="m-2 text-gray-600 bg-white border-0 mx-8 py-1 px-3 rounded text-lg focus:outline-none shadow hover:text-white" id="didi" onclick="dislike()">undislike</button>
         </div>  
     </div>
     </div>
