--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
                 <span class="ml-3 text-xl">JavaScript Projects</span>
               </a>
               <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-                <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>    
-                <a href="list.html" class="mr-5 hover:text-gray-900">List</a>
-                <a href="about.html" class="mr-5 hover:text-gray-900">About</a>
+                <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
+                <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
+                <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
               </nav>
               <form action="https://github.com/007hyno">
                   <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
@@ -33,7 +33,9 @@
         </header>
         <div class="text-gray-500 bg-red-400 h-auto">
             <br>
-            <p class="text-red-400 bg-white text-6xl shadow-md rounded-xl w-2/12 mx-auto text-center font-medium">About</p>
+            <div class="text-center text-grey-500 mt-6 bg-white shadow rounded-xl ">  
+                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-bold text-red-400">About</h1>
+            </div>
             <section class="text-gray-700 body-font ">
                 <div class="container px-2 py-8 mx-auto">
                     <div class="flex flex-wrap -m-4">
@@ -42,7 +44,7 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                                     <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                                 </svg>
-                                <p class="leading-relaxed text-gray-700">Hello, I am a Enthusiastic  <span class="font-medium text-red-500"><</span> <span class="text-gray-800"> Web Developer</span> <span class="text-red-500 font-medium">></span> and This personal Website is to showcase my progress in<span class="text-gray-800"> JavaScript</span>. I will upload my mini project on<span class="text-gray-800"> JavaScript</span> here. I Will be updating this website as i do progress in <span class="text-gray-800"> JavaScript</span></p>
+                                <p class="leading-relaxed text-gray-700 font-medium">Hello, I am a Enthusiastic  <span class="font-medium text-red-500"><</span> <span class="text-gray-800"> Web Developer</span> <span class="text-red-500 font-medium">></span> and This personal Website is to showcase my progress in<span class="text-gray-800"> JavaScript</span>. I will upload my mini project on<span class="text-gray-800"> JavaScript</span> here. I Will be updating this website as i do progress in <span class="text-gray-800"> JavaScript</span></p>
                                 <a class="inline-flex items-center">
                                     <img alt="testimonial" src="https://images.unsplash.com/photo-1511367461989-f85a21fda167?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                                     <span class="flex-grow flex flex-col pl-4">
