--- a/list.html
+++ b/list.html
@@ -19,9 +19,9 @@
             </a>
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
                 <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
+                <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
                 <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
-                <a href="about.html" class="mr-5 hover:text-gray-900">About</a>
-                </nav>
+            </nav>
             <form action="https://github.com/007hyno">
                 <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -33,13 +33,14 @@
         </header>
         <div class="text-gray-800 bg-red-400 h-auto">
             <br>
-            <div class=" mx-auto">
-                <p class="text-white font-medium text-center text-4xl">Projects List</p>
+            <div class="text-center text-grey-500 mt-6 bg-white shadow rounded-xl ">  
+                <h1 class=" title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-400">Projects</h1>
             </div>
             <div class=" w-1/2 mx-auto">
                 <ul class="list-list-disc sm:list-disc md:list-disc lg:list-disc xl:list-disc text-xl ">
-                    <li>Calculator</li>
-                    <li>Like/Dislike Button</li>
+                    <li><span class="inline-block py-1 px-3  m-1 rounded bg-blue-100 text-blue-400 text-xl font-medium tracking-widest">CALCULATOR</span></li>
+                    <li><span class="inline-block py-1 px-3 m-1  rounded bg-blue-100 text-blue-400 text-xl font-medium tracking-widest">LIKE/DISLIKE</span></li>
+                    <li><span class="inline-block py-1 px-3 m-1  rounded bg-blue-100 text-blue-400 text-xl font-medium tracking-widest">CLOCK# </span></li>
                 </ul>
             </div>
         </div>
