--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Calculator</title>
+    <title>Java</title>
 </head>
         <style>
             .red{
@@ -30,9 +30,9 @@
       <span class="ml-3 text-xl">JavaScript Projects</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>   
+      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
+      <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
       <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
-      <a href="about.html" class="mr-5 hover:text-gray-900">About</a> 
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
@@ -69,12 +69,12 @@
 <hr>
         <!-- ////////////////////////////////////////////////////////////////////////////////// -->
         <!-- calculator -->
-        <section class="bg-red-400 text-gray-700 body-font pb-8">  
+        <section class="bg-white text-gray-700 body-font pb-8 h-full">  
             <div class="container px-5 py-2 mx-auto pb-8 mb-8 text-center">
-        <div class="text-center text-grey-500 mt-6 bg-white shadow rounded-xl ">  
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-red-400">Calculator</h1>
+        <div class="text-center text-grey-500 mt-6 bg-white w-1/4 sm:w-1/2 mx-auto bg-red-500 shadow rounded-xl ">  
+            <h1 class="sm:text-2xl text-3xl mb-4 font-medium text-white">Calculator</h1>
         </div>
-        <div class="mx-auto lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
+        <div class="border-2 border-red-200 mx-auto lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
                     <!-- <h2 class="text-center text-gray-900 text-lg mb-1 font-medium title-font text-lg">...|...</h2> -->
         <div class="text-center">
             <input class="text-center bg-white rounded border border-gray-400 focus:outline-none focus:border-blue-500 shadow-sm font-medium text-base px-4 py-2 mb-2" placeholder="Enter no here" type="text" id="a" name="1">
@@ -96,9 +96,9 @@
   </section>
   <hr>
             <!-- like and dislike -->
-            <section class="bg-blue-300 text-gray-700 body-font pb-8">  
+            <section class="bg-blue-300 text-gray-700 body-font pb-8 h-full">  
               <div class="container bg-blue-300 px-5 py-2 mx-auto pb-8 mb-8">
-          <div class="text-center text-grey-500 mt-6 bg-white rounded-xl shadow">    
+          <div class="text-center text-grey-500 mt-6 bg-white rounded-xl shadow w-1/4 sm:w-1/2 mx-auto">    
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-300  ">Like / Dislike</h1>
   </div>
   <div class="mx-auto lg:w-1/3 md:w-1/2 bg-gray-300 rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
@@ -109,6 +109,41 @@
     </div>
     </div>
     </section>
+    <!-- clock code here -->
+    <section class="text-gray-700 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-1/4 sm:w-1/2 mb-10 bg-red-500 rounded-xl mx-auto">
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-white">Digital Clock</h1>   
+        </div>
+        <div class="flex flex-wrap -m-4 text-center">
+          <div class="p-1 md:w-1/4 sm:w-1/4 w-1/4">
+            <div class="border-2 border-red-200 px-4 py-6 rounded-lg shadow-md">
+              <h2 class="title-font font-medium text-3xl text-red-500" id="hh"></h2>
+              <p class="leading-relaxed text-red-400">Hours</p>
+            </div>
+          </div>
+          <div class="p-1 md:w-1/4 sm:w-1/4 w-1/4">
+            <div class="border-2 border-red-200 px-4 py-6 rounded-lg shadow-md">
+              <h2 class="title-font font-medium text-3xl text-red-500" id="mm"></h2>
+              <p class="leading-relaxed text-red-400">Minutes</p>
+            </div>
+          </div>
+          <div class="p-1 md:w-1/4 sm:w-1/4 w-1/4">
+            <div class="border-2 border-red-200 px-4 py-6 rounded-lg shadow-md">
+              <h2 class="title-font font-medium text-3xl text-red-500" id="ss"></h2>
+              <p class="leading-relaxed text-red-400">Second</p>
+            </div>
+          </div>
+          <div class="p-1 md:w-1/4 sm:w-1/4 w-1/4">
+            <div class="border-2 border-red-200 px-4 py-6 rounded-lg shadow-md">
+              <h2 class="title-font font-medium text-3xl text-red-500" id="tt"></h2>
+              <p class="leading-relaxed text-red-400">Time</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="clock.js"></script>
 </body>
 <script>
 
