--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <button class="text-white bg-red-500 border-0 py-1 px-6 rounded text-lg shadow focus:outline-none" id="div" onclick="div()">÷</button>
         </div>
         <div class="my-2 bg-gray-100 border-1 font-medium shadow text-center text-blue-400 w-25 text-lg rounded-xl" id="ans">
-            Result
+            Result_here
         </div>
       </div>
     </div>
