add file for js and css

--- a/index.html
+++ b/index.html
@@ -4,22 +4,9 @@
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     <title>Java</title>
 </head>
-        <style>
-            .red{
-            font-size: 18px;
-            background : rgba(114, 180, 255, 0.904);
-            color:rgb(247, 242, 242);
-            margin-bottom: 0px;
-            }
-            .un{ background : rgba(255, 255, 255, 0.904); 
-              color:rgb(214, 214, 214); 
-              } 
-          .hi{ background : rgba(29, 250, 184, 0.904);
-              color:rgb(238, 238, 238); 
-              }
-        </style>
 <body>
 <header class="text-gray-700 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -30,9 +17,9 @@
       <span class="ml-3 text-xl">JavaScript Projects</span>
     </a>
     <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
-      <a href="index.html" class="mr-5 hover:text-gray-900">Home</a>  
-      <a href="about.html" class="mr-5 hover:text-gray-900">About</a>  
-      <a href="list.html" class="mr-5 hover:text-gray-900">List</a>  
+      <a href="index.html" class="btn mr-5">Home</a>  
+      <a href="about.html" class="btn mr-5">About</a>  
+      <a href="list.html" class=" btn mr-5">List</a>  
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
