added a width detector

--- a/list.html
+++ b/list.html
@@ -34,7 +34,7 @@
         <div class="text-gray-800 bg-red-400 h-auto">
             <br>
             <div class="text-center text-grey-500 mt-6 bg-white shadow rounded-xl ">  
-                <h1 class=" title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-400">Projects</h1>
+                <h1 class=" title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-400">Mini Projects</h1>
             </div>
             <div class=" w-1/2 mx-auto">
                 <ul class="list-list-disc sm:list-disc md:list-disc lg:list-disc xl:list-disc text-xl ">
