--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="index.html" class="btn mr-5">Home</a>  
       <a href="about.html" class="btn mr-5">About</a>  
       <a href="list.html" class=" btn mr-5">List</a>  
+      <a href="width.html" class=" btn mr-5">Width</a>  
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
@@ -87,6 +88,7 @@
               <div class="container bg-blue-300 px-5 py-2 mx-auto pb-8 mb-8">
           <div class="text-center text-grey-500 mt-6 bg-white rounded-xl shadow w-1/4 sm:w-1/2 mx-auto">    
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-blue-300  ">Like / Dislike</h1>
+      <p class="sm:text-4xl text-3xl mb-4 font-medium text-blue-300  "><b>One button will light up at a time</b><br> just like any other reaction button on internet.</p>
   </div>
   <div class="mx-auto lg:w-1/3 md:w-1/2 bg-gray-300 rounded-lg p-8 md:ml-auto w-full mt-10 md:mt-0 shadow">
         <div class="rex text-center">
