--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="index.html" class="btn mr-5">Home</a>  
       <a href="about.html" class="btn mr-5">About</a>  
       <a href="list.html" class=" btn mr-5">List</a>  
-      <a href="width.html" class=" btn mr-5">Width</a>  
+      <a href="width.html" class=" btn mr-5">Resolution</a>  
     </nav>
     <form action="https://github.com/007hyno">
         <button class="inline-flex items-center bg-red-500 border-0 py-1 px-3 focus:outline-none hover:bg-red-300 rounded text-white mt-4 md:mt-0">Github
